<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#347C37">

    <View
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginEnd="6dp"
        android:background="#0F5912"
        app:layout_constraintBottom_toBottomOf="@id/cvDetLayout"
        app:layout_constraintEnd_toStartOf="@id/cvDetLayout"
        app:layout_constraintTop_toTopOf="@id/cvDetLayout" />

    <View
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:background="#0F5912"
        app:layout_constraintBottom_toBottomOf="@id/cvDetLayout"
        app:layout_constraintStart_toEndOf="@id/cvDetLayout"
        app:layout_constraintTop_toTopOf="@id/cvDetLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#549A57"
        app:cardCornerRadius="6dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3">

            <EditText
                android:id="@+id/etA11"
                style="@style/EditTextStyle"
                android:hint="@string/a_1_1" />

            <EditText
                android:id="@+id/etA12"
                style="@style/EditTextStyle"
                android:hint="@string/a_1_2" />

            <EditText
                android:id="@+id/etA13"
                style="@style/EditTextStyle"
                android:hint="@string/a_1_3" />

            <EditText
                android:id="@+id/etA21"
                style="@style/EditTextStyle"
                android:hint="@string/a_2_1" />

            <EditText
                android:id="@+id/etA22"
                style="@style/EditTextStyle"
                android:hint="@string/a_2_2" />

            <EditText
                android:id="@+id/etA23"
                style="@style/EditTextStyle"
                android:hint="@string/a_2_3" />

            <EditText
                android:id="@+id/etA31"
                style="@style/EditTextStyle"
                android:hint="@string/a_3_1" />

            <EditText
                android:id="@+id/etA32"
                style="@style/EditTextStyle"
                android:hint="@string/a_3_2" />

            <EditText
                android:id="@+id/etA33"
                style="@style/EditTextStyle"
                android:hint="@string/a_3_3" />

        </GridLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        style="@style/ButtonStyle"
        android:layout_marginTop="26dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@id/cvDetLayout"
        app:layout_constraintTop_toBottomOf="@id/cvDetLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        style="@style/ButtonStyle"
        android:layout_marginStart="16dp"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@id/btnCalculate"
        app:layout_constraintTop_toTopOf="@id/btnCalculate" />

    <TextView
        android:id="@+id/tvResult"
        style="@style/TitleStyle"
        android:layout_marginTop="40dp"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"
        tools:text="2305390" />

</androidx.constraintlayout.widget.ConstraintLayout>