<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#459148"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvMainTitle"
        style="@style/TitleStyle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/select_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTwoByTwo"
        style="@style/ButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/two_by_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnThreeByThree"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:text="@string/three_by_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTwoByTwo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFourByFour"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:text="@string/four_by_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnThreeByThree" />

</androidx.constraintlayout.widget.ConstraintLayout>